manifests/argocd/cf-tunnel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
  namespace: cloudflared
spec:
  selector:
    matchLabels:
      app: cloudflared
  replicas: 1
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      nodeSelector:
        kubernetes.io/hostname: talos-ute-nle
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
      - name: cloudflared
        image: cloudflare/cloudflared:latest
        args:
        - tunnel
        - --config
        - /etc/cloudflared/config/config.yaml
        - --origincert
        - /etc/cloudflared/cert/cert.pem
        - run
        livenessProbe:
          httpGet:
            path: /ready
            port: 2000
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
        volumeMounts:
        - name: config
          mountPath: /etc/cloudflared/config
          readOnly: true
        - name: creds
          mountPath: /etc/cloudflared/creds
          readOnly: true
        - name: cert
          mountPath: /etc/cloudflared/cert
          readOnly: true
      volumes:
      - name: creds
        secret:
          secretName: cloudflared-credentials
          items:
          - key: credentials.json
            path: credentials.json
      - name: config
        configMap:
          name: cloudflared
          items:
          - key: config.yaml
            path: config.yaml
      - name: cert
        secret:
          secretName: tunnel-cert
          items:
          - key: cert.pem
            path: cert.pem
