manifests/argocd/argocd-dns-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-http
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argocd.pixr.in`)
      services:
        - kind: Service
          name: argocd-server
          port: 80
